--- a/despot/main/templates/main/heroes.html
+++ b/despot/main/templates/main/heroes.html
@@ -35,8 +35,8 @@
                     <span>Вы вошли как: {{ user.username }}</span>
                     <a href="{% url 'logout' %}">Выйти</a>
                 {% endif %}
-            </div>            
-            
+            </div>
+
             <div class="advertisement">
                 <a href="https://drugvokrug.ru"><img src="{% static 'img/advert.gif' %}"></a>
             </div>
@@ -46,7 +46,7 @@
             <div class="red_block font-2">
                 <a>Досье героя</a>
             </div>
-            
+
             <div class="heroes_container">
                 <!-- Сообщение по умолчанию -->
                 <div id="noHeroSelected" class="blue_block no-hero-selected" {% if selected_hero %}style="display: none;"{% endif %}>
@@ -54,11 +54,11 @@
                         <a class="font-125 mon">Выберите героя справа, чтобы посмотреть его досье</a>
                     </div>
                 </div>
-                
+
                 <!-- Карточка героя -->
                 <div id="heroCard" class="hero_card blue_block" {% if not selected_hero %}style="display: none;"{% endif %}>
                     <div class="hero_card_up">
-                        <div class="hero_basic_info">                            
+                        <div class="hero_basic_info">
                             <div class="hero_right_title">
                                 <a>Герой</a>
                             </div>
@@ -69,9 +69,29 @@
                                     <div class="no_photo">Нет фото</div>
                                 {% endif %}
                             </div>
-                            <div class="hero_info_row">Имя: <span id="heroFirstName">{% if selected_hero %}{{ selected_hero.first_name }}{% endif %}</span></div>
-                            <div class="hero_info_row">Фамилия: <span id="heroLastName">{% if selected_hero %}{{ selected_hero.last_name }}{% endif %}</span></div>
-                            <div class="hero_info_row">Прозвище: <span id="heroAka">{% if selected_hero %}{{ selected_hero.aka }}{% endif %}</span></div>
+                            <!-- Имя, фамилия, прозвище и статус в одном блоке -->
+                            <div class="hero_name_block">
+                                <div class="hero_name_row">
+                                    <span class="detail_label">Имя:</span>
+                                    <span id="heroFirstName" class="detail_value">{% if selected_hero %}{{ selected_hero.first_name }}{% endif %}</span>
+                                </div>
+                                <div class="hero_name_row">
+                                    <span class="detail_label">Фамилия:</span>
+                                    <span id="heroLastName" class="detail_value">{% if selected_hero %}{{ selected_hero.last_name }}{% endif %}</span>
+                                </div>
+                                <div class="hero_name_row">
+                                    <span class="detail_label">Прозвище:</span>
+                                    <span id="heroAka" class="detail_value">{% if selected_hero %}{{ selected_hero.aka }}{% endif %}</span>
+                                </div>
+                                <div class="hero_name_row">
+                                    <span class="detail_label">Статус:</span>
+                                    <span id="heroStatus" class="detail_value status-{% if selected_hero and selected_hero.is_active %}active{% else %}retired{% endif %}">
+                                        {% if selected_hero %}
+                                            {% if selected_hero.is_active %}действующий герой{% else %}в отставке{% endif %}
+                                        {% endif %}
+                                    </span>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="hero_card_down">
@@ -81,47 +101,39 @@
                             </div>
                             <div class="hero_detail_row">
                                 <span class="detail_label">Раса:</span>
-                                <span id="heroRace">{% if selected_hero %}{{ selected_hero.race }}{% endif %}</span>
+                                <span id="heroRace" class="detail_value">{% if selected_hero %}{{ selected_hero.race }}{% endif %}</span>
                             </div>
                             <div class="hero_detail_row">
                                 <span class="detail_label">Пол:</span>
-                                <span id="heroGender">{% if selected_hero %}{{ selected_hero.get_gender_display }}{% endif %}</span>
+                                <span id="heroGender" class="detail_value">{% if selected_hero %}{{ selected_hero.get_gender_display }}{% endif %}</span>
                             </div>
                             <div class="hero_detail_row">
                                 <span class="detail_label">Возраст:</span>
-                                <span id="heroAge">{% if selected_hero and selected_hero.age %}{{ selected_hero.age }}{% else %}не указан{% endif %}</span>
+                                <span id="heroAge" class="detail_value">{% if selected_hero and selected_hero.age %}{{ selected_hero.age }}{% else %}не указан{% endif %}</span>
                             </div>
                             <div class="hero_detail_row">
                                 <span class="detail_label">Рост:</span>
-                                <span id="heroHeight">{% if selected_hero and selected_hero.height %}{{ selected_hero.height }} см{% else %}не указан{% endif %}</span>
+                                <span id="heroHeight" class="detail_value">{% if selected_hero and selected_hero.height %}{{ selected_hero.height }} см{% else %}не указан{% endif %}</span>
                             </div>
                             <div class="hero_detail_row">
-                                <span class="detail_label">Место рождения:</span>
-                                <span id="heroBirthPlace">{% if selected_hero %}{{ selected_hero.birth_place }}{% endif %}</span>
+                                <span class="detail_label">М. рож.:</span>
+                                <span id="heroBirthPlace" class="detail_value">{% if selected_hero %}{{ selected_hero.birth_place }}{% endif %}</span>
                             </div>
                             <div class="hero_detail_row">
-                                <span class="detail_label">Номер телефона:</span>
-                                <span id="heroPhone">{% if selected_hero %}{{ selected_hero.phone }}{% endif %}</span>
+                                <span class="detail_label">Тел.:</span>
+                                <span id="heroPhone" class="detail_value">{% if selected_hero %}{{ selected_hero.phone }}{% endif %}</span>
                             </div>
-                            
+
                             <div class="hero_right_title">
                                 <a>Рабочая информация</a>
                             </div>
-                            <div class="hero_detail_row">
-                                <span class="detail_label">Биография</span>
-                                <div id="heroBiography" class="hero_biography">{% if selected_hero %}{{ selected_hero.biography|linebreaks }}{% endif %}</div>
+                            <div class="hero_detail_row2">
+                                <span class="detail_label">Биография:</span>
+                                <div id="heroBiography" class="hero_biography detail_value2">{% if selected_hero %}{{ selected_hero.biography|linebreaks }}{% endif %}</div>
                             </div>
-                            <div class="hero_detail_row">
-                                <span class="detail_label">Нарушение</span>
-                                <div id="heroConvicted" class="hero_convicted">{% if selected_hero and selected_hero.convicted_for %}{{ selected_hero.convicted_for|linebreaks }}{% else %}нет информации{% endif %}</div>
-                            </div>
-                            <div class="hero_detail_row">
-                                <span class="detail_label">Статус:</span>
-                                <span id="heroStatus" class="{% if selected_hero and selected_hero.is_active %}status-active{% else %}status-retired{% endif %}">
-                                    {% if selected_hero %}
-                                        {% if selected_hero.is_active %}действующий герой{% else %}в отставке{% endif %}
-                                    {% endif %}
-                                </span>
+                            <div class="hero_detail_row2">
+                                <span class="detail_label">Нарушение:</span>
+                                <div id="heroConvicted" class="hero_convicted detail_value2">{% if selected_hero and selected_hero.convicted_for %}{{ selected_hero.convicted_for|linebreaks }}{% else %}нет информации{% endif %}</div>
                             </div>
                         </div>
                     </div>
@@ -133,10 +145,10 @@
             <div class="main_right_name font-2">
                 <a>Действующие герои</a>
             </div>
-            
+
             <div class="rightpanel_block">
                 {% for hero in active_heroes %}
-                <div class="rightpanel_item hero-select-item {% if selected_hero and selected_hero.id == hero.id %}selected{% endif %}" 
+                <div class="rightpanel_item hero-select-item {% if selected_hero and selected_hero.id == hero.id %}selected{% endif %}"
                      data-hero-id="{{ hero.id }}">
                     <div class="active_hero_info">
                         <div class="active_hero_name mon font-125">
@@ -146,7 +158,7 @@
                 </div>
                 {% empty %}
                 <div class="no_active_heroes">
-                    <span class="mon">Нет действующих героев</span>
+                    <span class="mon font-125">Нет действующих героев</span>
                 </div>
                 {% endfor %}
             </div>
@@ -157,7 +169,7 @@
 
             <div class="rightpanel_block">
                 {% for hero in retired_heroes %}
-                <div class="rightpanel_item hero-select-item {% if selected_hero and selected_hero.id == hero.id %}selected{% endif %}" 
+                <div class="rightpanel_item hero-select-item {% if selected_hero and selected_hero.id == hero.id %}selected{% endif %}"
                      data-hero-id="{{ hero.id }}">
                     <div class="retired_hero_info">
                         <div class="retired_hero_name mon font-125">
@@ -167,7 +179,7 @@
                 </div>
                 {% empty %}
                 <div class="no_retired_heroes">
-                    <span class="mon">Нет героев в отставке</span>
+                    <span class="mon font-125">Нет героев в отставке</span>
                 </div>
                 {% endfor %}
             </div>
