--- a/despot/main/templates/main/new_review.html
+++ b/despot/main/templates/main/new_review.html
@@ -38,7 +38,7 @@
             </div>            
             
             <div class="advertisement">
-                <img src="{% static 'img/advert.gif' %}">
+                <a href="https://drugvokrug.ru"><img src="{% static 'img/advert.gif' %}"></a>
             </div>
         </div>
 
@@ -167,5 +167,6 @@
         </div>
     </main>
     
+    <script src="{% static 'scripts.js' %}"></script>
 </body>
 </html>
