--- a/despot/main/templates/main/search.html
+++ b/despot/main/templates/main/search.html
@@ -35,10 +35,10 @@
                     <span>Вы вошли как: {{ user.username }}</span>
                     <a href="{% url 'logout' %}">Выйти</a>
                 {% endif %}
-            </div>            
-            
+            </div>
+
             <div class="advertisement">
-                <img src="{% static 'img/advert.gif' %}">
+                <a href="https://drugvokrug.ru"><img src="{% static 'img/advert.gif' %}"></a>
             </div>
         </div>
 
@@ -46,16 +46,78 @@
             <div class="red_block font-2">
                 <a>Пропавшие без вести</a>
             </div>
-            <div class="blue_block mon font-125">
-                <a>К счастью, нет записей.</a>
+            <div class="search_cards">
+                {% if persons_missing %}
+                    {% for person in persons_missing %}
+                    <div class="person-card blue_block mon font-125" data-person-id="{{ person.id }}">
+                        <img src="{% if person.photo %}{{ person.photo.url }}{% else %}{% static 'img/default_person.jpg' %}{% endif %}" 
+                            alt="{{ person.name }}" class="person-photo">
+                        <span class="person-name">{{ person.name }}</span>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <a>Нет записей.</a>
+                {% endif %}
+            </div>
+
+            <div class="red_block font-2">
+                <a>Найдены</a>
+            </div>
+            <div class="search_cards">
+                {% if persons_found %}
+                    {% for person in persons_found %}
+                    <div class="person-card blue_block mon font-125" data-person-id="{{ person.id }}">
+                        <img src="{% if person.photo %}{{ person.photo.url }}{% else %}{% static 'img/default_person.jpg' %}{% endif %}" 
+                            alt="{{ person.name }}" class="person-photo">
+                        <span class="person-name">{{ person.name }}</span>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <a>Нет записей.</a>
+                {% endif %}
             </div>
 
             <div class="red_block font-2">
                 <a>Разыскиваются</a>
             </div>
-            <div class="blue_block mon font-125">
-                <a>К счастью, нет записей.</a>
-            </div>            
+            <div class="search_cards">
+                {% if persons_wanted %}
+                    {% for person in persons_wanted %}
+                    <div class="person-card blue_block mon font-125" data-person-id="{{ person.id }}">
+                        <img src="{% if person.photo %}{{ person.photo.url }}{% else %}{% static 'img/default_person.jpg' %}{% endif %}" 
+                            alt="{{ person.name }}" class="person-photo">
+                        <span class="person-name">{{ person.name }}</span>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <a>Нет записей.</a>
+                {% endif %}
+            </div>
+
+            <div class="red_block font-2">
+                <a>Пойманные преступники</a>
+            </div>
+            <div class="search_cards">
+                {% if persons_caught %}
+                    {% for person in persons_caught %}
+                    <div class="person-card blue_block mon font-125" data-person-id="{{ person.id }}">
+                        <img src="{% if person.photo %}{{ person.photo.url }}{% else %}{% static 'img/default_person.jpg' %}{% endif %}" 
+                            alt="{{ person.name }}" class="person-photo">
+                        <span class="person-name">{{ person.name }}</span>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <a>Нет записей.</a>
+                {% endif %}
+            </div>
+
+            <!-- Добавьте модальное окно в конце body перед script -->
+            <div id="personModal" class="modal-overlay" style="display: none;">
+                <div class="modal-content">
+                    <span class="modal-close">&times;</span>
+                    <div class="modal-person-info"></div>
+                </div>
+            </div>
         </div>
 
         <div class="main_right">
@@ -71,7 +133,7 @@
             </div>
         </div>
     </main>
-    
 
+    <script src="{% static 'scripts.js' %}"></script>
 </body>
 </html>
